modified:   app.json 	deleted:    assets/fonts/SpaceMono-Regular.ttf 	modified:   package-lock.json 	modified:   package.json

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "GCT Staff",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/i.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,14 +13,14 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
+        "foregroundImage": "./assets/images/i.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/icon.png"
+      "favicon": "./assets/images/i.png"
     },
     "plugins": [
       "expo-router",
